name:                Taiji
version:             0.1.0
synopsis:            An integrated analysis pipeline.
description:         Please see README.md
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           2016 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  stack.yaml, example_config.yml, example_input.yml
cabal-version:       >=1.10

executable taiji
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -- -optl-static -optc-static -optl-pthread
  build-depends:
      base >=4 && <5
    , aeson
    , bytestring
    , binary
    , bio-experiments
    , bio-pipelines
    , bioinformatics-toolkit >=0.2.4
    , case-insensitive
    , containers
    , conduit-combinators
    , cereal
    , double-conversion
    , data-ordlist
    , data-default
    , hashable
    , haskell-igraph
    , lens
    , mtl
    , SciFlow >=0.5.3
    , statistics
    , turtle
    , text
    , unordered-containers
    , vector
    , yaml

  default-language:    Haskell2010
  other-modules:
    Component.ATACSeq
    Component.Initialization
    Component.Network
    Component.RNASeq
    Component.TFBS
    Component.Rank
    Constants
    Types

source-repository head
  type:     git
  location: https://github.com/kaizhang/Taiji
