name:                taiji
version:             0.1.0
synopsis:            An integrated analysis pipeline.
description:         Please see README.md
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           2016 Kai Zhang
category:            Bio
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable taiji
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:
      base
    , aeson
    , bytestring
    , binary
    , bio-experiments
    , bio-pipelines
    , bioinformatics-toolkit
    , containers
    , conduit-combinators
    , cereal
    , double-conversion
    , data-ordlist
    , data-default
    , hashable
    , haskell-igraph
    , unordered-containers
    , lens
    , mtl
    , turtle
    , text
    , SciFlow

  default-language:    Haskell2010
  other-modules:
    Pipeline
    Network

source-repository head
  type:     git
  location: https://github.com/githubuser/taiji
