name:                Taiji
version:             0.2.0-beta
synopsis:            An integrated analysis pipeline.
description:         Please see README.md
homepage:            http://kzhang.org/Taiji/
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2016-2017 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  example_config.yml, example_input.yml
cabal-version:       >=1.10

Flag idr
  Description: Call peaks using IDR framework
  Default:     False

Flag static
  Description: Build static executable
  Default:     False

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Taiji.Component.ATACSeq
    Taiji.Component.Initialization
    Taiji.Component.Network
    Taiji.Component.RNASeq
    Taiji.Component.TFBS
    Taiji.Component.Rank
    Taiji.Constants
    Taiji.Types
    Taiji.Tools

  if flag(idr)
    exposed-modules: Taiji.Component.ATACSeq.CallPeak.IDR
  else
    exposed-modules: Taiji.Component.ATACSeq.CallPeak.MACS2

  build-depends:
      base >=4 && <5
    , aeson
    , bytestring
    , binary
    , bio-experiments
    , bio-pipelines
    , bioinformatics-toolkit >=0.3.2
    , case-insensitive
    , containers
    , conduit-combinators
    , cereal
    , double-conversion
    , data-ordlist
    , data-default
    , hashable
    , haskell-igraph >=0.2.2
    , http-conduit
    , IntervalMap
    , lens
    , mtl
    , SciFlow >=0.5.4
    , statistics
    , split
    , shelly
    , text
    , temporary
    , unordered-containers
    , vector
    , yaml

executable taiji
  hs-source-dirs:      app
  main-is:             Main.hs

  if flag(static)
    ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  else
    ghc-options:         -threaded -Wall

  if flag(idr)
    CPP-Options: -DIDR_PEAK_CALLER

  build-depends:
      base >=4 && <5
    , bio-pipelines
    , SciFlow >=0.5.4
    , Taiji

  default-language:    Haskell2010

  other-modules:
    Paths_Taiji

source-repository head
  type:     git
  location: https://github.com/kaizhang/Taiji
