name:                taiji-viz
version:             0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017 Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable taiji-viz
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  other-modules:
    Taiji.Visualize

  build-depends:
      base
    , bioinformatics-toolkit
    , bytestring
    , bytestring-lexing
    , diagrams-core
    , diagrams-lib
    , diagrams-rasterific
    , vector

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/taiji-viz
